header position fix on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,13 @@ p {
   background-image: var(--tl-1);
 }
 
+#hero h5,
+#hero h1,
+#hero p {
+  position: relative;
+  transition: transform 0.3s ease;
+}
+
 /* GRID COMMON STYLES */
 
 #grid {
@@ -369,6 +376,31 @@ button {
   border: var(--border);
   border-radius: 2rem;
   font-family: "Changa", sans-serif;
+}
+
+/* Media Queries */
+@media screen and (max-height: 800px) {
+  #hero h5,
+  #hero h1,
+  #hero p {
+    transform: translateY(3rem);
+  }
+}
+
+@media screen and (max-height: 700px) {
+  #hero h5,
+  #hero h1,
+  #hero p {
+    transform: translateY(5rem);
+  }
+}
+
+@media screen and (max-height: 600px) {
+  #hero h5,
+  #hero h1,
+  #hero p {
+    transform: translateY(7rem);
+  }
 }
 
 /* Easter Egg Confirmation */
